testdata/baselines/reference/compiler/simpleTestMultiFile.errors.txt
/src/bar.ts(1,7): error TS2322: Type 'number' is not assignable to type 'string'.
/src/foo.ts(1,7): error TS2322: Type 'string' is not assignable to type 'number'.


==== /src/foo.ts (1 errors) ====
    const x: number = "";
          ~
!!! error TS2322: Type 'string' is not assignable to type 'number'.
    
==== /src/bar.ts (1 errors) ====
    const y: string = 1;
          ~
!!! error TS2322: Type 'number' is not assignable to type 'string'.